--- a/css/impressive.css
+++ b/css/impressive.css
@@ -1,3 +1,17 @@
+div.window{
+  top: 0;
+  left: 0;
+  position: absolute;
+  background: blue;
+  height: 100px;
+  width: 100px;
+}
+div.window > .draggable{
+  width: 100%;
+  height: 20px;
+  background: grey;
+}
+ 
 div.property-window{
   position: absolute;
   background: rgb(224, 224, 244);
